# banter-bus-core-api

./: .copier-answers.yml  .deepsource.toml  .dockerignore  .env.sample  .env.test  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  service.yaml
.devcontainer/: devcontainer.example.json  devcontainer.json  docker-compose.dev.yml
app/: __init__.py  event_manager.py  event_models.py  exception_handlers.py  healthcheck.py  main.py  model_validator.py  socket_manager.py
app/clients/management_api/: __init__.py  api_client.py  exceptions.py  models.py
app/clients/management_api/api/: default_api.py  games_api.py  questions_api.py  stories_api.py
app/core/: config.py  exception_handlers.py  exceptions.py
app/game_state/: exceptions.py  game_state_exceptions.py  game_state_factory.py  game_state_models.py  game_state_repository.py  game_state_service.py
app/game_state/games/: abstract_game.py  exceptions.py  fibbing_it.py  game.py
app/game_state/games/fibbing_it/: fibbing_it.py  get_questions.py
app/player/: player_api.py  player_api_models.py  player_exceptions.py  player_factory.py  player_models.py  player_repository.py  player_service.py
app/room/: room_event_handlers.py  room_events.py  room_events_models.py  room_exceptions.py  room_factory.py  room_models.py  room_repository.py  room_service.py
app/room/games/: abstract_game.py  exceptions.py  fibbing_it.py  fibbing_it_event_handlers.py  game.py
app/room/lobby/: lobby_event_handlers.py  lobby_event_helpers.py  lobby_events_models.py  lobby_service.py
specs/: asyncapi.yml
tests/contract/: test_management_api.py
tests/data/: game_state_collection.py  management_api_game.py  player_collection.py  room_collection.py
tests/integration/: conftest.py  test_lobby.py  test_player_api.py  test_room.py
tests/unit/: common.py  factories.py  get_services.py  mocks.py
tests/unit/data/: data.py  http_requests.py
tests/unit/game_state/: fake_game_state_repository.py  test_game_state_sevice.py
tests/unit/game_state/games/: test_game_state_fibbing_it.py
tests/unit/player/: fake_player_repository.py  test_player_service.py
tests/unit/room/: fake_game_api.py  fake_room_repository.py  test_room_service.py
tests/unit/room/lobby/: test_lobby_service.py  test_lobby_service_kick_player.py  test_lobby_service_start_game.py
