[tool.poetry]
name = "app"
version = "0.1.0"
description = "The core API using websockets (socketio) to manage game state."
authors = ["Haseeb Majid <hello@haseebmajid.dev>"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
httpx = "^0.22.0"
omnibus = { git = "https://gitlab.com/banter-bus/omnibus.git", branch = "fix-cors" }
python-socketio = "^5.6.0"
aioredis = "^2.0.1"
redis = "^4.2.2"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
flake8 = "^4.0.1"
ipython = "^7.29.0"
pre-commit = "^2.15.0"
asgi-lifespan = "^1.0.1"
pytest = "^6.2.5"
pytest-mock = "^3.6.1"
pytest-asyncio = "^0.16.0"
factory-boy = "^3.2.1"
python-socketio = { extras = ["client"], version = "^5.5.0" }
aiohttp = "^3.8.1"
pytest-cov = "^3.0.0"
pactman = "^2.30.0"
virtualenv = "^20.13.1"
pytest-httpx = "^0.20.0"
mergedeep = "^1.3.4"
pytest-freezegun = "^0.4.2"
black = "22.3.0"
pyupgrade = "^2.34.0"
mypy = "v0.910"

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["app", "tests"]

[tool.black]
line-length = 120

[tool.mypy]
exclude = "app/clients/management_api"
plugins = ["pydantic.mypy"]
follow_imports = "silent"
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
